2007-11-23  Andrey Kiselev  <dron@ak4719.spb.edu>

	* configure.com, libtiff/tif_vms.c: Better OpenVMS support. Patches
	from Alexey Chupahin.

2007-11-02  Frank Warmerdam  <warmerdam@pobox.com>

	* tif_write.c: Rip out the fancy logic in TIFFAppendToStrip() for 
	establishing if an existing tile can be rewritten to the same location 
	by comparing the current size to all the other blocks in the same 
	directory.  This is dangerous in many situations and can easily 
	corrupt a file.  (observed in esoteric GDAL situation that's hard to
	document).  This change involves leaving the stripbytecount[] values 
	unaltered till TIFFAppendToStrip().  Now we only write a block back
	to the same location it used to be at if the new data is the same
	size or smaller - otherwise we move it to the end of file.

	* tif_dirwrite.c: Try to avoid writing out a full readbuffer of tile
	data when writing the directory just because we have BEENWRITING at
	some point in the past.  This was causing odd junk to be written out
	in a tile of data when a single tile had an interleaving of reading 
	and writing with reading last.  (highlighted by gdal 
	autotest/gcore/tif_write.py test 7. 

	* tif_predict.c: use working buffer in PredictorEncodeTile to avoid
	modifying callers buffer. 
	http://trac.osgeo.org/gdal/ticket/1965

	* tif_predict.c/h: more fixes related to last item, keeping a 
	distinct pfunc for encode and decode cases as these were getting
	mixed up sometimes.
	http://trac.osgeo.org/gdal/ticket/1948

2007-11-01  Frank Warmerdam  <warmerdam@pobox.com>

	* tif_predict.c/h, tif_lzw.c, tif_zip.c: Improvements so that 
	predictor based encoding and decoding works in read-write update
	mode properly. 
	http://trac.osgeo.org/gdal/ticket/1948

2007-10-24  Joris Van Damme  <joris.at.lebbeke@skynet.be>

	* tif_dirread.c: Fixed problem with bogus file triggering 
	assert(td->td_planarconfig == PLANARCONFIG_CONTIG) in 
	ChopUpSingleUncompressedStrip
